<resources>
    <string name="app_name">Life</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="add_task">添加任务</string>
    <string name="edit_task">编辑任务</string>
    <string name="select_category">选择分类</string>
    <string name="select_photo">选择图片</string>
    <string name="preview">预览</string>
</resources>